refactor: :recycle: : JSON 형식 리팩터링